@@ -48,6 +48,7 @@ FreeRADIUS 3.0.21 Thu 14 Nov 2019 12:00:00 EDT urgency=low
 	* Revert 3.0.20 patch which caused crashes on duplicate clients.
 	* Update WiMAX-MSK attribute.  Fixes #3280.
 	* Fix crash when trying to access non-existant regex capture group.
+	* Add capability to handle coredumps on FreeBSD.
 
 FreeRADIUS 3.0.20 Thu 14 Nov 2019 12:00:00 EDT urgency=medium
 	Feature improvements
